# apuestas-bot

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPRINT14_CLOSE_REPORT.md  SPRINT14_FINAL_STATE.md  alembic.ini  docker-compose.gpu.yml  docker-compose.signoz.yml  docker-compose.yml  pyproject.toml
.claude/skills/apuestas-context/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: api_contract.yml  ci.yml  deploy.yml  deps-audit.yml  pages.yml  security.yml
capture/: apuestas_capture.py
capture/systemd/: apuestas-capture.service  apuestas-capture.timer  install.sh
config/: caliente_selectors.yaml  codere_selectors.yaml  enabled_sports.yaml  ev_thresholds.yaml  news_sources.yaml  prefect_schedules.py  slo_calibration.yaml  soccer_draw_thresholds.yaml  sport_seasons.yaml  upgrade_thresholds.yaml  venues_seed.yaml  vulture_whitelist.py
config/grafana/: bot_health_dashboard.json
config/mx_books/: campobet.yaml  jugabet.yaml  winpot.yaml
config/offshore_books/: bc_game.yaml  betus.yaml  betwhale.yaml  everygame.yaml  sportsbetting_ag.yaml
config/postgres/init/: 01-extensions.sql
config/prometheus/: alerting_rules.yml  recording_rules.yml
config/signoz/: otel-config.yaml
docker/: Dockerfile
docs/: anti-patterns-checklist.md  arquitectura.md  ci_cd.md  dependabot-status.md  github_setup.md  odds_sources.md  onboarding.md  runbook.md  runbook_dr.md  security-review.md
exports/fiscal/: fiscal_2026-04.csv  fiscal_2026-04_summary.json
migrations/: env.py
migrations/versions/: 0001_init_core_schema.py  0002_analysis_360_schema.py  0003_postmortem_and_ops_schema.py  0004_player_props_and_weather.py  0005_tennis_nhl_schema.py  0006_auto_settle_trigger.py  0007_tier_a_features.py  0008_test_data_flag.py  0009_data_retention_compression.py  0010_book_limits.py  0011_public_betting_arbs.py  0012_bayesian_dc_shadow_pinnacle.py  0013_slippage_shap_latency.py  0014_multi_currency_bankroll.py  0015_native_external_ids.py  0016_team_external_ids.py  0017_odds_api_raw_snapshots.py  0018_bets_dedup_unique.py  0019_void_existing_contradictions.py  0020_remove_bankroll_pivot_pick_alerts.py  0021_pick_alerts_unique_identity.py  0022_pick_alerts_unique_market.py  0023_pick_alerts_snapshots.py  0024_polymarket_kalshi_consensus.py  0025_partition_snapshots_plus_retention.py  0026_expand_schema_for_backfill.py  0027_pick_closing_lines.py  0028_backfill_league_ids.py  0029_sprint13_identity_resolution.py  0030_consolidate_duplicate_teams.py  0031_consolidate_duplicate_matches.py  0032_drop_arb_opportunities.py
monitoring/grafana/dashboards/: betting_kpis.json  calibration.json
notebooks/: 01_explore_sport.ipynb  04_backtest_ablation.ipynb  05_pick_postmortem.ipynb
prompts/nlp/: ner_v1.yaml
prompts/post_mortem/: v1.yaml
prompts/pre_match/: v1.yaml
scripts/: audit_deps.sh  autopilot.sh  autopilot_mx_extra.sh  autopilot_parallel.sh  autopilot_post_training.sh  autotune_draw_thresholds.py  backfill_nba_pbp_extended.sh  backfill_retrosheet_mlb.sh  backfill_rolling_features.py  backfill_rolling_real.py  backtest_dc_vs_lgbm.py  backtest_simulated.py  backup.sh  backup_offsite.sh  bootstrap_bot.sh  bootstrap_clubelo.py  bootstrap_dixon_coles.py  chaos.sh  check_prereqs.sh  dedup_existing_teams.py  download_models.sh  dr_drill.sh  error_analysis.py  fit_closing_line_predictor.py  full_retrain_sprint13.sh  generate_sbom.sh  grid_search_thresholds.py  ingest_538_ratings.py  ingest_clubelo.py  ingest_fangraphs_team.py  ingest_football_data_co_uk.py  ingest_moneypuck_nhl.py  ingest_nflfastr.py  ingest_sackmann_tennis.py  ingest_statsbomb_open.py  ingest_weather_archive.py  install_mcp.sh  install_nvidia_toolkit.sh  operate.sh  populate_odds_api_event_ids.py  (+18 more)
src/apuestas/: __init__.py  cache.py  config.py  db.py  sports.py
src/apuestas/agents/: __init__.py  match_analyzer.py
src/apuestas/api/: main.py
src/apuestas/backtest/: __init__.py  __main__.py  walk_forward.py
src/apuestas/betting/: alert_store.py  alternative_lines.py  book_limits.py  book_power_ratings.py  closing_line_predictor.py  clv.py  clv_consensus.py  consensus_fetch.py  correlation_filter.py  derivative_markets.py  detector.py  devig.py  devig_compare.py  ev.py  ev_thresholds.py  execution_timing.py  half_period_markets.py  hedge.py  information_edge.py  live_kalman.py  market_clusters.py  market_consensus.py  market_efficiency.py  market_movement.py  odds_spike.py  portfolio.py  props_markets.py  regional.py  rlm_detector.py  season.py  sgp.py  slippage.py  soccer_props_model.py  sport_focus.py  sport_props_models.py  steam_detector.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_pipeline_end_to_end.py
tests/fixtures/: api_football_fixtures_sample.json  odds_api_sample.json
tests/integration/: conftest.py  test_settle_bets.py  test_sprint11_wires.py
tests/unit/: test_alert_store.py  test_api_security.py  test_backtest.py  test_bayesian_prior.py  test_calibrate.py  test_clv_tracking.py  test_concept_drift.py  test_confidence_label.py  test_correlation_filter.py  test_devig.py  test_discrepancy.py  test_dixon_coles.py  test_dixon_coles_matrix.py  test_dixon_coles_runtime.py  test_drift.py  test_elo_builder.py  test_elo_features_toggle.py  test_enrich_helpers.py  test_ev.py  test_football_data_csv_parser.py  test_grammars.py  test_hardening_f2_f8.py  test_historical_odds_integrity.py  test_honeypots.py  test_ingest_betfair.py  test_ingest_pinnacle.py  test_ingest_us_books.py  test_isotonic.py  test_kelly.py  test_llm_client.py  test_low_hold_filter.py  test_mark_alert_results.py  test_market_consensus.py  test_match_analyzer_fuse.py  test_match_resolver.py  test_mejoras_detector.py  test_memory_loop.py  test_metrics.py  test_mlb_poisson.py  test_mlb_poisson_wrapper.py  (+27 more)
(+223 files in other folders)
