[project]
name = "apuestas"
version = "0.1.0"
description = "Sports betting bot — 100% local, multi-deporte (NBA/MLB/NFL/Fútbol/Boxeo)"
readme = "README.md"
requires-python = "==3.14.4"
license = { text = "MIT" }
authors = [{ name = "Leandro Pérez G." }]

# ═══════════════════════════════════════════════════════════════════════════
# TODAS LAS VERSIONES PINEADAS EXACTAS (==) PARA REPRODUCIBILIDAD.
# Python 3.14.4 free-threaded (PEP 779 — oficial support desde 3.14).
#
# AUDIT STATUS: verificado 2026-04-19 vía MCP Context7 + búsquedas web.
# Las versiones críticas actualizadas:
#   - Python 3.14.4 (released 2026-04-07)
#   - FastAPI 0.128.0 (Context7 verified)
#   - Polars 1.32.3 (Context7 verified)
#   - XGBoost 3.2.x (March 2026 release)
#   - LightGBM 4.6.0 (latest stable)
#
# Re-validar cada 3 meses con `make audit-deps` → corre `uv lock --upgrade`
# + Context7 queries para librerías críticas.
# ═══════════════════════════════════════════════════════════════════════════

dependencies = [
    # ── Core async / framework ────────────────────────────────────────────
    "fastapi==0.128.0",
    "granian[reload]==2.5.4",
    "uvloop==0.22.1",
    "httpx[http2]==0.28.1",
    "asyncpg==0.31.0",
    "sqlalchemy[asyncio]==2.0.45",
    "alembic==1.14.1",
    "psycopg[binary,pool]==3.2.13",
    "redis[hiredis]==7.4.0",
    # ── Configuración / serialización ─────────────────────────────────────
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "msgspec==0.20.0",
    "python-dotenv==1.2.2",
    "orjson==3.11.6",
    "pyyaml==6.0.3",
    "types-pyyaml==6.0.12.20260408",
    # ── Task queue / orquestación ─────────────────────────────────────────
    "taskiq[reload]==0.12.2",
    "taskiq-redis==1.2.2",
    "taskiq-fastapi==0.3.3",
    "prefect==3.4.11",
    # ── Data / ML core ────────────────────────────────────────────────────
    "polars[pyarrow,timezone]==1.34.0",
    "pyarrow==22.0.0",
    "duckdb==1.4.2",
    "numpy==2.3.3",
    "scipy==1.16.1",
    "pandas==2.3.3",
    # ── Validación de datos ───────────────────────────────────────────────
    "pandera[polars]==0.24.0",
    # ── Observabilidad ────────────────────────────────────────────────────
    "structlog==25.1.0",
    "opentelemetry-api==1.34.0",
    "opentelemetry-sdk==1.34.0",
    "opentelemetry-instrumentation-fastapi==0.55b0",
    "opentelemetry-instrumentation-sqlalchemy==0.55b0",
    "opentelemetry-instrumentation-httpx==0.55b0",
    "opentelemetry-exporter-otlp==1.34.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prometheus-client==0.21.1",  # Deuda 2: métricas custom en obs/metrics.py
    "slowapi==0.1.9",
    # ── Resiliencia ───────────────────────────────────────────────────────
    "stamina==25.1.0",
    "pybreaker==1.3.0",
    "aiolimiter==1.2.1",
    # ── CLI ───────────────────────────────────────────────────────────────
    "typer==0.16.0",
    "rich==14.1.0",
    "cloudpickle==3.1.1",
]

[project.optional-dependencies]
ml = [
    "lightgbm==4.6.0",
    "xgboost==2.1.4",
    "catboost==1.2.9",
    "scikit-learn==1.7.2",
    "optuna==4.5.0",
    "mlflow==3.11.1",
    "shap==0.51.0",
    "mapie==1.0.1",
    "crepes==0.8.0",
    "venn-abers==1.5.0",
    "nannyml==0.13.1",
    "evidently==0.7.5",
    # river==0.22.0  # ADWIN drift detector — requiere Python ≤3.13 (build fails en 3.14);
    #                  instalar manualmente con `uv pip install river` cuando migren wheels.
    #                  El adaptador en monitors/concept_drift.py detecta su presencia y activa.
    "penaltyblog==1.5.0",
    "tabpfn==7.1.1",
    "statsmodels==0.14.5",
]
sports = [
    "nba-api==1.9.0",
    "pybaseball==2.2.7",
    "nflreadpy==0.1.5",
    "statsbombpy==1.14.0",
    "soccerdata==1.9.0",
    "kloppy==3.18.0",
    "understatapi==0.2.0",
    "mlb-statsapi==1.9.0",
    # Tenis + NHL (§25)
    "hockey-scraper==1.3.1",
]
llm = [
    "openai==2.24.0",
    "litellm==1.83.10",
    "sentence-transformers==5.1.0",
    "smolagents==1.22.0",
    "pydantic-ai==0.4.2",  # SSRF fix requiere 1.56.0; bloqueado por OTel/mcp ecosystem — TODO migrar stack completo
    "pgvector==0.4.1",
    "mcp==1.15.0",  # DNS rebinding fix requiere 1.23.0; bloqueado por dep chain — mitigación: bind sólo a 127.0.0.1
]
scraping = [
    "selectolax==0.3.34",
    "camoufox[geoip]==0.4.11",
    "asyncpraw==7.8.1",
    "atproto==0.0.65",
    "feedparser==6.0.12",
    "beautifulsoup4==4.13.5",
]
bot = [
    "python-telegram-bot==22.4",
]
odds = [
    # Fuentes sharp gratis (§15.4). Opcionales — el bot arranca sin ellas.
    "betfairlightweight==2.23.2",
]
tui = [
    "textual==0.86.3",
    "textual-dev==1.7.0",
    "plotext==5.3.2",
]
monitoring = [
    "sentry-sdk[fastapi]==2.41.0",
]
weather = [
    "meteostat==1.7.2",
]
dev = [
    "pytest==8.4.2",  # bloqueado en 8.4.x por camoufox→seleniumbase; reabrir con scrape stack moderno
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.1.0",
    "pytest-xdist==3.8.0",
    "pytest-mock==3.15.0",
    "testcontainers[postgres,redis]==4.14.1",
    "ruff==0.14.1",
    "mypy==1.20.1",
    "pre-commit==4.3.0",
    "detect-secrets==1.5.0",
    "ipykernel==7.1.0",
    "jupyterlab==4.5.7",
    "papermill==2.6.0",
    "py-spy==0.4.1",
    "memory-profiler==0.61.0",
    "pip-audit==2.9.0",
    "pip-licenses==5.0.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.2",
    "mkdocstrings[python]==0.30.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apuestas"]

[tool.uv]
package = true
# Fuerza uso de Python 3.14.4t (free-threaded) si está disponible.
# uv auto-detecta `python3.14t`; si no, cae a `python3.14` (con GIL).
python-preference = "only-managed"
python-downloads = "automatic"

# Overrides para deps transitivas con wheels incompatibles en x86_64/cp314.
# kaleido 0.2.1.post1 (pineado indirecto por statsbombpy→plotly legacy) solo
# publica wheel armv7l; kaleido>=1.0.0 es pure-python y corre en cualquier plat.
#
# El resto son fixes de seguridad (Dependabot 2026-05-04):
#   - aiohttp >= 3.13.4    → CVE-2026-34518/19/20 + 6 más
#   - gitpython >= 3.1.47  → cmd injection
#   - urllib3 >= 2.6.3     → 3 CVEs decompression-bomb
#   - requests >= 2.33.0   → CVE tmp file reuse
#   - transformers >= 4.58 → arbitrary code exec en Trainer (la rc3 es 5.0.0; pinchamos al >= 4.58 si existe, caemos a último 4.x estable mientras tanto)
override-dependencies = [
    "kaleido>=1.2.0",
    "aiohttp>=3.13.4",
    "gitpython>=3.1.47",
    "urllib3>=2.6.3",
    "requests>=2.33.0",
    # Forzar python-dotenv seguro contra el pin estricto de litellm 1.83.10
    "python-dotenv>=1.2.2",
    # Forzar lightgbm 4.6 (CVE-2024-43598 RCE) sobre el cap < 4.6 de nannyml 0.13.1
    "lightgbm>=4.6.0",
]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["migrations/versions", "notebooks"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20",
    "SIM", "RET", "ARG", "PTH", "PL", "RUF", "ASYNC", "S",
]
ignore = [
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0915", # too-many-statements
    "S101",    # assert (ok in tests)
    "N815",    # mixed-case (external APIs)
    "N803",    # argument names (matrices X, DF)
    "N806",    # non-lowercase in function (X, Y, DF linear algebra convention)
    "T201",    # print (ok in scripts/notebooks)
    "PLC0415", # import-outside-top-level (lazy imports intencionales)
    "RUF001",  # ambiguous unicode in strings (× símbolos matemáticos deliberados)
    "RUF002",  # ambiguous unicode in docstrings (9 capas × 2 equipos)
    "RUF003",  # ambiguous unicode in comments
    "RUF012",  # mutable-class-default (Textual widgets patrón BINDINGS)
    "S110",    # try-except-pass (best-effort code en cache/observability)
    "S108",    # hardcoded-temp (tests/scripts)
    "RET504",  # unnecessary-assign (claridad sobre perf)
    "ARG001",  # unused-function-argument (abstract methods, callbacks)
    "ARG002",  # unused-method-argument
    "E501",    # line-too-long (URLs, prompts multi-línea)
    "SIM108",  # if-else vs ternary (legibilidad prima)
    "SIM105",  # contextlib.suppress (try/except/pass más explícito)
    "SIM117",  # multiple-with-statements (anidado con context managers)
    "PLW0603", # global-statement (singleton settings)
    "PLW0108", # unnecessary-lambda (clarity in tests)
    "PLW1510", # subprocess-run-without-check (intencional)
    "PLR1714", # repeated-equality-comparison
    "F841",    # unused-variable (en closures capturadas)
    "RUF005",  # collection-literal-concatenation
    "RUF015",  # unnecessary-iterable-allocation
    "RUF059",  # unused-unpacked-variable (tuple destructuring parcial)
    "B007",    # unused-loop-control-variable
    "B018",    # useless-expression (en tests de import)
    "B024",    # abstract-base-class-without-abstract-method
    "E402",    # module-import-not-at-top (sys.path hacks en scripts)
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name (i, l, j en algoritmos)
    "PTH111",  # os-path-expanduser (compatibility)
    "PTH123",  # builtin-open (compatibility con libs externas)
    "S311",    # non-cryptographic-random (jitter de retry)
    "S314",    # xml-element-tree (RSS parsing confiable)
    "S607",    # partial-path (scripts de setup)
    "S112",    # try-except-continue
    "ASYNC109", # async-function-with-timeout
    "S608",    # sql-injection (false positives: params bindeados)
    "S603",    # subprocess-without-shell (ya con args list, seguro)
    "RUF006",  # asyncio-dangling-task (fire-and-forget intencional)
    "PLW2901", # redefined-loop-name (refinamiento en loop)
    "A001",    # builtin-shadowing (id local)
    "ARG005",  # unused-lambda-argument (placeholders)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR", "ARG", "PLC0415", "RUF", "F841", "E501", "N806", "B018"]
"scripts/**/*.py" = ["T201", "S", "PLC0415"]
"src/apuestas/tui/**/*.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = false  # Libs externas (nba_api, atproto, etc.) devuelven Any
warn_unused_configs = false
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = false
disable_error_code = ["misc", "attr-defined", "no-any-return", "has-type", "override", "assignment", "no-untyped-call", "unused-ignore", "name-defined"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["nba_api.*", "pybaseball.*", "nflreadpy.*", "penaltyblog.*", "shin.*", "tabpfn.*", "statsapi.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "apuestas.ingest.*",
    "apuestas.tui.*",
    "apuestas.ml.*",
    "apuestas.flows.*",
    "apuestas.betting.*",
    "apuestas.llm.*",
    "apuestas.features.*",
    "apuestas.monitors.*",
    "apuestas.api.*",
    "apuestas.tasks.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=apuestas",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
]
markers = [
    "slow: slow tests (>5s)",
    "integration: integration tests requiring Docker",
    "e2e: end-to-end tests",
    "gpu: tests requiring CUDA GPU",
    "free_threading: tests sensibles a thread-safety (free-threaded build)",
]
filterwarnings = [
    # "error" sobre DeprecationWarning/PendingDeprecation que SEAN de nuestro código
    "error::DeprecationWarning:apuestas.*",
    "error::PendingDeprecationWarning:apuestas.*",
    # Resto: default (no escala, solo emite). Muchas libs externas (prefect,
    # testcontainers, pydantic v1 shim, coolname, nannyml) emiten
    # DeprecationWarning/UserWarning en Python 3.14 que no controlamos.
    "default",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src/apuestas"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
